# edihkal

./: .dockerignore  .env  .gitignore  .gitlab-ci.yml  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  deny.toml  docker-compose.yml  sqlx-data.json
.github/workflows/: audit.yml  format.yml  lint.yml  test.yaml  test.yml
docs/: development.md  faq.md
edid/: Cargo.toml  LICENSE  edid.toml  edid.yaml
edid/src/: cli.rs  client.rs  config.rs  configuration.rs  drugs.rs  main.rs
edid/src/client/: api_client.rs  drugs.rs  error.rs  mod.rs
edid/src/client/api_client/: error.rs  mod.rs
edid/src/cmd/: mod.rs
edid/src/cmd/drug/: define_drug.rs  list_drugs.rs  mod.rs
edid/src/cmd/entry/: mod.rs  new_entry.rs
edihkal/: Cargo.toml  README.md
edihkal-cli/: Cargo.toml
edihkal-client/: Cargo.toml
edihkal-client/src/: drugs.rs  edihkal.rs  entries.rs  error.rs  errors.rs  lib.rs
edihkal-core/: Cargo.toml
edihkal-core/src/: drugs.rs  lib.rs
edihkal-server/: .env  Cargo.toml  configuration.yaml
edihkal-server/localdev/: README.md  envs  init_db.sh  start_db.sh
edihkal-server/src/: drugs.rs  lib.rs  main.rs  router.rs
edihkal-server/tests/: drugs.rs  health_check.rs
edihkal-server/tests/api/: drugs.rs  main.rs
edihkal/configuration/: base.yaml  localdev.yaml
edihkal/docker/: Dockerfile  Dockerfile.localdev
edihkal/entity/: Cargo.toml
edihkal/entity/src/: drug.rs  lib.rs  prelude.rs
edihkal/localdev/: README.md  init_db.sh
edihkal/localdev/self-signed-certs/: README.md
edihkal/migration/: .dir-locals.el  Cargo.toml  README.md
edihkal/migration/src/: lib.rs  m20220101_000001_create_drug_table.rs  m20221124_233148_create_entry_table.rs  m20230527_181001_create_user_table.rs
edihkal/migrations/: 20220904184901_create_drugs_table.sql
edihkal/src/: app.rs  configuration.rs  drugs.rs  entries.rs  errors.rs  lib.rs  main.rs  openapi.rs  query.rs  resource.rs  responses.rs  router.rs  tracing.rs
edihkal/src/api/: mod.rs  query_params.rs
edihkal/src/api/handlers/: create.rs  delete.rs  mod.rs  read.rs
edihkal/src/db/: mutation.rs  query.rs
edihkal/tests/api/: drugs.rs  entry.rs  health_check.rs  helpers.rs  main.rs  openapi.rs
edihkal/tests/api/helpers/: client.rs  database.rs  http.rs  mod.rs  service.rs
edihkal_macros/: Cargo.toml
edihkal_macros/src/: lib.rs
edihkal_macros/src/derives/: mod.rs  new_model.rs  new_model_trait.rs  util.rs
edihkal_tracing/: .dir-locals.el  Cargo.toml
edihkal_tracing/src/: lib.rs  test_helpers.rs
entity/: Cargo.toml  README.md
entity/src/: drug.rs  entry.rs  lib.rs  prelude.rs  user.rs  uuid.rs
entity/src/behavior/: drug.rs  entry.rs  mod.rs
entity/src/extend/: drug.rs  entry.rs  mod.rs  user.rs
entity/tests/: construct_active_model.rs  drug.rs  user.rs
localdev/: compose.yaml  env.example
sea_orm_new_model/: Cargo.toml
sea_orm_new_model/src/: lib.rs
sea_orm_new_model/tests/derive/: main.rs  new_model.rs  new_model_attrs.rs  new_model_trait.rs
seaxum/: Cargo.toml
seaxum/src/: lib.rs
seaxum/src/api/: mod.rs  resource.rs
seaxum/src/db/: entity.rs  mod.rs
src/: lib.rs  main.rs
tests/: health_check.rs
