[workspace]
members = [
  "edid",
  "edihkal",
  "edihkal/migration",
  "edihkal-client",
  "edihkal_macros",
  "edihkal_tracing",
  "entity",
  "seaxum"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
license-file = "LICENSE"
repository = "https://0xacab.org/lazulite/edihkal"
