[workspace]
members = [
  "edid",
  "edihkal",
  "edihkal/migration",
  "edihkal-client",
  "edihkal_macros",
  "edihkal_tracing",
  "entity",
  "sea_orm_new_model",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/lazulit3/edihkal"
