[package]
name = "edid"
version = "0.1.0"
description = "A CLI client for edihkal."
edition.license = true
edition.license-file = true
edition.repository = true
edition.workspace = true

[dependencies]
anyhow = "1.0.65"
chrono = { version = "0.4.23", default-features = false, features = ["clock"] }
clap = { version = "4.2.5", features = ["derive"] }
edihkal-client = { version = "0.1.0", path = "../edihkal-client" }
edihkal_tracing = { version = "0.1.0", path = "../edihkal_tracing" }
figment = { version = "0.10.8", features = ["env", "toml"] }
interim = { version = "0.1.0", features = ["chrono"] }
serde = { version = "1.0.162", features = ["derive"] }
thiserror = "1.0.37"
tokio = { version = "1.28", features = ["macros", "rt"] }
