[package]
name = "edihkal-client"
version = "0.1.0"
description = "Client for edihkal API."
edition.repository = true
edition.workspace = true

[dependencies]
entity = { version = "0.1.0", path = "../entity" }
reqwest = { version = "0.11.15", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.95"
thiserror = "1.0.37"
tracing = "0.1.37"

[dev-dependencies]
chrono = { version = "0.4.23", default-features = false, features = ["clock"] }
edihkal_tracing = { version = "0.1.0", path = "../edihkal_tracing", features = ["test-helpers"] }
tokio = { version = "1.27", features = ["rt-multi-thread", "macros"] }
wiremock = "0.5"
