[package]
name = "edihkal-client"
version = "0.1.0"
description = "Client for edihkal API."
edition.repository = true
edition.workspace = true

[dependencies]
entity = { version = "0.1.0", path = "../entity" }
reqwest = { version = "0.11.18", default-features = false, features = ["json", "rustls-tls-native-roots"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.37"
tracing = "0.1.37"

[dev-dependencies]
chrono = { version = "0.4.25", default-features = false, features = ["clock"] }
edihkal_tracing = { version = "0.1.0", path = "../edihkal_tracing", features = ["test-helpers"] }
tokio = { version = "1.28", features = ["rt-multi-thread", "macros"] }
wiremock = "0.5"
