[package]
name = "edihkal-server"
version = "0.1.0"
edition = "2021"
description = "Server for EDIHKAL"

[dependencies]
axum = { version = "0.5.15", default-features = false, features = ["http1"] }
serde = "1.0.144"
sqlx = { version = "0.6.1", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.20.1", features = ["macros"] }

[dev-dependencies]
axum-test-helper = "0.1.1"
reqwest = { version = "0.11.11", default-features = false, features = ["rustls-tls"] }
sqlx-cli = { version = "0.6.1", default-features = false, features = ["postgres", "rustls"] }
