[package]
name = "edihkal-server"
version = "0.1.0"
edition = "2021"
description = "Server for EDIHKAL"

[dependencies]
axum = { version = "0.5.15", default-features = false, features = ["http1"] }
config = { version = "0.13.2", default-features = false, features = ["yaml"] }
serde = "1.0.144"
serde_json = "1.0.85"
sqlx = { version = "0.6.1", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "migrate"], default-features = false }
tokio = { version = "1.20.1", features = ["macros"] }
uuid = { version = "1.1.2", features = ["v4"] }

[dev-dependencies]
axum-test-helper = "0.1.1"
reqwest = { version = "0.11.11", default-features = false, features = ["rustls-tls"] }
