[package]
name = "edihkal"
version = "0.1.0"
description = "Server for edihkal"
edition.license = true
edition.license-file = true
edition.repository = true
edition.workspace = true

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.18", default-features = false, features = ["http1", "json", "query", "tokio"] }
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
config = { version = "0.13.3", default-features = false, features = ["yaml"] }
edihkal_tracing = { path = "../edihkal_tracing" }
entity = { path = "../entity" }
migration = { path = "migration", default-features = false }
sea-orm = { version = "0.11", default-features = false, features = ["macros", "with-json", "with-uuid", "sqlx-postgres", "runtime-tokio-rustls"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = "1.0.163"
serde_json = "1.0.96"
sqlx = { version = "0.6", default-features = false }
thiserror = "1"
tokio = { version = "1.28", features = ["macros"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", default-features = false, features = ["request-id", "trace", "util"] }
tracing = "0.1.37"

[dependencies.sea_skipper]
git = "https://github.com/lazulit3/sea_skipper.git"
rev = "ec9f7fb4301afdf78d82f9365a4009e33bb45e1"
features = ["derive", "derive-newmodel-with-serde"]

[dev-dependencies]
bytes = "1"
chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
edihkal-client = { version = "0.1.0", path = "../edihkal-client" }
# Enable test-helpers on edihkal_tracing when running tests
edihkal_tracing = { path = "../edihkal_tracing", features = ["test-helpers"] }
once_cell = "1"
reqwest = { version = "0.11.18", default-features = false, features = ["json", "rustls-tls"] }
