[package]
name = "edihkal_macros"
version = "0.1.0"
description = "Macros used by edihkal"
edition.license = true
edition.license-file = true
edition.repository = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
bae = { version = "0.1", default-features = false }
proc-macro2 = { version = "1", default-features = false }
quote = { version = "1", default-features = false }
syn = { version = "1", default-features = false, features = ["parsing", "proc-macro", "derive", "printing"] }
