[package]
name = "edihkal_tracing"
version = "0.1.0"
description = "Tracing setup shared by edihkal crates."
# Inherit these from workspace Cargo.toml
edition.workspace = true
license.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
once_cell = { version = "1" , optional = true }
tracing = "0.1.37"
tracing-bunyan-formatter = "0.3.7"
tracing-log = { version = "0.1.3", default-features = false, features = ["log-tracer"] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["std", "env-filter", "smallvec", "parking_lot", "registry"] }

[features]
test-helpers = ["once_cell"]
