[package]
name = "entity"
version = "0.1.0"
publish = false
edition.license = true
edition.license-file = true
edition.workspace = true

[dependencies]
sea_orm_new_model = { version = "0.1.0", path = "../sea_orm_new_model" }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dependencies.sea-orm]
default-features = false
features = ["macros", "with-chrono", "with-json", "with-uuid"]
version = "0.11"
