[package]
name = "entity"
version = "0.1.0"
publish = false
# Inherit these from workspace Cargo.toml
edition.workspace = true
license.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dependencies.sea_skipper]
git = "https://github.com/lazulit3/sea_skipper.git"
rev = "ec9f7fb4301afdf78d82f9365a4009e33bb45e1"
features = ["derive", "derive-newmodel-with-serde"]

[dependencies.sea-orm]
default-features = false
features = ["macros", "with-chrono", "with-json", "with-uuid"]
version = "0.11"
