[package]
name = "sea_orm_new_model"
version = "0.1.0"
description = "Library for deriving NewModel types from SeaORM Models."
edition.license = true
edition.license-file = true
edition.repository = true
edition.workspace = true

[dependencies]
edihkal_macros = { version = "0.1", path = "../edihkal_macros", optional = true }
sea-orm = { version = "0.11", default-features = false }

[features]
default = [ "derive", "with-serde" ]

# Enables DeriveNewModel & DeriveNewModelTrait macros.
derive = [ "edihkal_macros" ]
# Derives serde Deserialize and Serialize on NewModels derived with DeriveNewModel.
with-serde = ["edihkal_macros?/derive-serde"]
