[package]
name = "seaxum"
version = "0.1.0"
publish = false
edition.license = true
edition.license-file = true
edition.workspace = true

[dependencies]
sea-orm = { version = "0.11", default-features = false }

[dev-dependencies]
seaxum = { path = ".", features = ["tests-cfg"] }

[features]
default = []
tests-cfg = ["sea-orm/macros", "sea-orm/tests-cfg"]
