[package]
name = "migration"
version = "0.1.0"
publish = false
edition.repository = true
edition.workspace = true

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "^1", features = ["attributes", "tokio1"] }
sea-orm = { version = "0.11", features = ["macros"], default-features = false }

[dependencies.sea-orm-migration]
version = "0.11"
default-features = false
features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
]

[features]
default = ["cli"]
# Enables `cli` feature flag for sea-orm-migration allowing use of `sea-orm-cli migrate`.
cli = ["sea-orm-migration/cli"]
