[package]
name = "migration"
version = "0.1.0"
publish = false
# Inherit these from workspace Cargo.toml
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "^1", features = ["attributes", "tokio1"] }

[dependencies.sea-orm-migration]
version = "0.12"
default-features = false
features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
]

[features]
default = ["cli"]
# Enables `cli` feature flag for sea-orm-migration allowing use of `sea-orm-cli migrate`.
cli = ["sea-orm-migration/cli"]

[[bin]]
name = "migration"
required-features = ["cli"]
